# BPTS-ButTheProjectActuallyCompiles

./: CMakeLists.txt  vcpkg.json
cmake/: AddCXXFiles.cmake  XSEPlugin.cmake
src/: Events.cpp  FocusManager.cpp  FocusManager.h  NearbyActorScanner.cpp  NearbyActorScanner.h  PCH.h  Papyrus.cpp  Papyrus.h  Settings.cpp  Settings.h  bhkRigidBodyT.h  xSEPlugin.cpp
src/API/: BTPS_API.cpp  BTPS_API.h  BTPS_API_decl.h  Compatibility.cpp  Compatibility.h  TrueDirectionalMovementAPI.h  TrueHUDAPI.h
src/Filters/: Filter.cpp  Filter.h  FilterFormType.cpp  FilterFormType.h  FilterManager.cpp  FilterManager.h  FilterParam.cpp  FilterParam.h
src/Input/: BPTSInputMap.h  InputHandler.cpp  InputHandler.h  InputMap.cpp
src/Json/lib_json/: json_value.cpp
src/RevE/: Hooks.cpp  Hooks.h  Offsets.h
src/SmoothCamStuff/: RayCast.cpp  RayCast.h  bhkLinearCastCollector.h
src/UI/: DebugAPI.cpp  DebugAPI.h  SelectionWidget.cpp  SelectionWidget.h
src/lib/: FenixUtils.cpp  FenixUtils.h  ObjectBound.h  ObjectOverride.cpp  ObjectOverride.h  Util.cpp  Util.h
